[package]
name = "lamport-clock-sim"
version = "0.1.0"
authors = ["mandreyel <mandreyel@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
futures = "0.3"
log = "0.4"
rand = "0.8"
tokio = { version = "1.4", default-features = false, features = ["macros", "rt", "sync", "time"] }
